; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_bbr.c_bbr_sack_mergable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_bbr.c_bbr_sack_mergable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bbr_sendmap = type { i32, i64, i64 }

@bbr_head = common dso_local global i32 0, align 4
@r_next = common dso_local global i32 0, align 4
@BBR_ACKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bbr_sendmap*, i64, i64)* @bbr_sack_mergable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bbr_sack_mergable(%struct.bbr_sendmap* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bbr_sendmap*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.bbr_sendmap*, align 8
  %9 = alloca %struct.bbr_sendmap*, align 8
  store %struct.bbr_sendmap* %0, %struct.bbr_sendmap** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %5, align 8
  %11 = load i32, i32* @bbr_head, align 4
  %12 = load i32, i32* @r_next, align 4
  %13 = call %struct.bbr_sendmap* @TAILQ_PREV(%struct.bbr_sendmap* %10, i32 %11, i32 %12)
  store %struct.bbr_sendmap* %13, %struct.bbr_sendmap** %8, align 8
  %14 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %5, align 8
  %15 = load i32, i32* @r_next, align 4
  %16 = call %struct.bbr_sendmap* @TAILQ_NEXT(%struct.bbr_sendmap* %14, i32 %15)
  store %struct.bbr_sendmap* %16, %struct.bbr_sendmap** %9, align 8
  %17 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %8, align 8
  %18 = icmp ne %struct.bbr_sendmap* %17, null
  br i1 %18, label %19, label %48

19:                                               ; preds = %3
  %20 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %8, align 8
  %21 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = load i32, i32* @BBR_ACKED, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %48

26:                                               ; preds = %19
  %27 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %8, align 8
  %28 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* %6, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %46, label %32

32:                                               ; preds = %26
  %33 = load i64, i64* %6, align 8
  %34 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %8, align 8
  %35 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %34, i32 0, i32 1
  %36 = load i64, i64* %35, align 8
  %37 = call i64 @SEQ_LT(i64 %33, i64 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %32
  %40 = load i64, i64* %7, align 8
  %41 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %8, align 8
  %42 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = call i64 @SEQ_GT(i64 %40, i64 %43)
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %39, %26
  store i32 1, i32* %4, align 4
  br label %81

47:                                               ; preds = %39, %32
  br label %48

48:                                               ; preds = %47, %19, %3
  %49 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %9, align 8
  %50 = icmp ne %struct.bbr_sendmap* %49, null
  br i1 %50, label %51, label %80

51:                                               ; preds = %48
  %52 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %9, align 8
  %53 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = load i32, i32* @BBR_ACKED, align 4
  %56 = and i32 %54, %55
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %80

58:                                               ; preds = %51
  %59 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %9, align 8
  %60 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %59, i32 0, i32 2
  %61 = load i64, i64* %60, align 8
  %62 = load i64, i64* %7, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %78, label %64

64:                                               ; preds = %58
  %65 = load i64, i64* %6, align 8
  %66 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %9, align 8
  %67 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %66, i32 0, i32 2
  %68 = load i64, i64* %67, align 8
  %69 = call i64 @SEQ_LT(i64 %65, i64 %68)
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %79

71:                                               ; preds = %64
  %72 = load i64, i64* %7, align 8
  %73 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %9, align 8
  %74 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %73, i32 0, i32 2
  %75 = load i64, i64* %74, align 8
  %76 = call i64 @SEQ_GT(i64 %72, i64 %75)
  %77 = icmp ne i64 %76, 0
  br i1 %77, label %78, label %79

78:                                               ; preds = %71, %58
  store i32 1, i32* %4, align 4
  br label %81

79:                                               ; preds = %71, %64
  br label %80

80:                                               ; preds = %79, %51, %48
  store i32 0, i32* %4, align 4
  br label %81

81:                                               ; preds = %80, %78, %46
  %82 = load i32, i32* %4, align 4
  ret i32 %82
}

declare dso_local %struct.bbr_sendmap* @TAILQ_PREV(%struct.bbr_sendmap*, i32, i32) #1

declare dso_local %struct.bbr_sendmap* @TAILQ_NEXT(%struct.bbr_sendmap*, i32) #1

declare dso_local i64 @SEQ_LT(i64, i64) #1

declare dso_local i64 @SEQ_GT(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
